# oslo-quant

./: .env.example  .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml
.github/workflows/: run_oslo_quant.yml
data/results/BORR.OL/: altman.json  currency.json  dupont.json  ohlson.json  piotroski.json  sloan.json
data/results/BRG.OL/: altman.json  currency.json  dupont.json  ohlson.json  piotroski.json  sloan.json
data/results/DOFG.OL/: altman.json  currency.json  dupont.json  ohlson.json  piotroski.json  sloan.json
data/results/ELK.OL/: altman.json  currency.json  dupont.json  ohlson.json  piotroski.json  sloan.json
data/results/FRO.OL/: altman.json  currency.json  dupont.json  ohlson.json  piotroski.json  sloan.json
data/results/HAFNI.OL/: altman.json  currency.json  dupont.json  ohlson.json  piotroski.json  sloan.json
data/results/KMAR.OL/: altman.json  currency.json  dupont.json  ohlson.json  piotroski.json  sloan.json
data/results/KOG.OL/: altman.json  currency.json  dupont.json  ohlson.json  piotroski.json  sloan.json
data/results/MOWI.OL/: altman.json  currency.json  dupont.json  ohlson.json  piotroski.json  sloan.json
data/results/NOD.OL/: altman.json  currency.json  dupont.json  ohlson.json  (+2 more)
oslo_quant/: __init__.py  cli.py  config.py  pipeline.py  report.py
oslo_quant/fetchers/: __init__.py  base.py  fmp_fetcher.py  yfinance_fetcher.py
oslo_quant/frameworks/: __init__.py  altman.py  base.py  dupont.py  ohlson.py  piotroski.py  sloan.py
tests/: fixtures.py  test_cli.py  test_config.py  test_frameworks.py  test_report.py
(+30 files in other folders)
