[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oslo-quant"
version = "0.1.0"
description = "Oslo Børs quantitative pre-computation system"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "numpy>=1.26",
    "requests>=2.31",
    "pyarrow>=14.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "ruff"]

[project.scripts]
oslo-quant = "oslo_quant.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["oslo_quant*"]

[tool.ruff]
line-length = 100
target-version = "py310"
